Adicionado controle de auditoria
